--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                  <!-- VÍDEO -->
 
 
-                <div class="video"> <iframe src="https://www.youtube.com/watch?v=Eti5xAfUirA" width="100%" height="393" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div>
+                <div class="video"> <iframe src="https://player.vimeo.com/video/44692841" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/44692841">The Art of the Food Truck: ATL</a> from <a href="https://vimeo.com/sarahlinebaugh">Sarah Rivero</a> on <a href="https://vimeo.com">Vimeo</a>.</p> </div>
                 
 
                  <!-- FIM DO VÍDEO -->
