--- a/newpage.html
+++ b/newpage.html
@@ -11,8 +11,13 @@
 <body>
       
       <h1>Maioridade Penal: o voto de cada um</h1>
+        
+        <div style="margin:0 auto">
 
-      <iframe src="https://www.obvibase.com/#token/JxhvDAZXGVaf/r/pfiffqsUFIct" width="100%" height="400px">
+      <iframe src="https://www.obvibase.com/#token/JxhvDAZXGVaf/r/pfiffqsUFIct" width="90%" height="600px" frameborder="no" >
+
+        </div>
+
 
 </body>
 
