--- a/newpage.html
+++ b/newpage.html
@@ -12,7 +12,7 @@
       
       <h1>Maioridade Penal: o voto de cada um</h1>
         
-        <div style="margin:0 auto">
+        <div style="margin:0 auto;">
 
       <iframe src="https://www.obvibase.com/#token/JxhvDAZXGVaf/r/pfiffqsUFIct" width="90%" height="600px" frameborder="no" >
 
